fixed sonar fixes